# ffmpeg-kit-extended

./: .clangd  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  TODO.md  build.sh  extract_functions.dart  ffmpeg-kit-extended.code-workspace  function_check.sh  functions_list.txt  missing_functions.txt  package-lock.json  package.json  pubspec.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  support.yml
.github/workflows/: flutter_example_ci.yaml  publish_pubdev.yaml  queue_pubdev_publish.yaml
TODO/android/: .gitignore  build.gradle  settings.gradle
TODO/ios/: ffmpeg_kit_flutter.podspec
TODO/ios/Classes/: FFmpegKitFlutterPlugin.h  FFmpegKitFlutterPlugin.m  FfmpegKitFlutterPlugin.swift
TODO/macos/: .gitignore  ffmpeg_kit_flutter.podspec
TODO/macos/Classes/: FFmpegKitFlutterPlugin.h  FFmpegKitFlutterPlugin.m  FfmpegKitFlutterPlugin.swift
flutter/: .gitignore  .metadata  .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
flutter/android/: build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
flutter/android/src/main/cpp/: CMakeLists.txt  dummy.cpp
flutter/doc/: index.md  installation.md  quick-start.md
flutter/doc/api/: config.md  data-models.md  ffmpeg-kit.md  ffplay-kit.md  ffprobe-kit.md  sessions.md  video-surface.md
flutter/doc/examples/: complete-apps.md
flutter/docs/: index.md  quick-start.md
flutter/example/: .gitignore  .pubignore  README.md  pubspec.yaml
flutter/hook/: build.dart
flutter/ios/: ffmpeg_kit_extended_flutter.podspec  ffmpeg_kit_flutter.podspec
flutter/lib/: abstract_session.dart  arch_detect.dart  chapter.dart  ffmpeg_kit.dart  ffmpeg_kit_config.dart  ffmpeg_kit_extended_flutter.dart  ffmpeg_kit_flutter.dart  ffmpeg_kit_flutter_method_channel.dart  ffmpeg_kit_flutter_platform_interface.dart  ffmpeg_session.dart  ffmpeg_session_complete_callback.dart  ffprobe_kit.dart  ffprobe_session.dart  ffprobe_session_complete_callback.dart  level.dart  log.dart  log_callback.dart  log_redirection_strategy.dart  media_information.dart  media_information_json_parser.dart  media_information_session.dart  media_information_session_complete_callback.dart  packages.dart  return_code.dart  session.dart  session_state.dart  signal.dart  statistics.dart  statistics_callback.dart  stream_information.dart
flutter/linux/: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  ffmpeg_kit_extended_flutter_plugin.cc  ffmpeg_kit_extended_flutter_plugin_private.h  ffmpeg_kit_flutter_plugin.cc  ffmpeg_kit_flutter_plugin_private.h
flutter/linux/include/ffmpeg_kit_extended_flutter/: ffmpeg_kit_extended_flutter_plugin.h  ffmpeg_kit_flutter_plugin.h
flutter/linux/test/: ffmpeg_kit_extended_flutter_plugin_test.cc  ffmpeg_kit_flutter_plugin_test.cc
flutter/macos/: .gitignore  ffmpeg_kit_extended_flutter.podspec  ffmpeg_kit_flutter.podspec
flutter/test/: api_test.dart  configuration_test.dart  ffmpeg_kit_flutter_method_channel_test.dart  ffmpeg_kit_flutter_test.dart  ffmpeg_kit_native_test.dart  ffmpeg_kit_session_test.dart  ffplay_kit_test.dart  ffprobe_kit_test.dart  flutter_test_config.dart  session_queue_manager_test.dart
flutter/windows/: .gitignore  CMakeLists.txt  config.cmake  ffmpeg_kit_extended_flutter_plugin.cpp  ffmpeg_kit_extended_flutter_plugin.h  ffmpeg_kit_extended_flutter_plugin_c_api.cpp  ffmpeg_kit_flutter_plugin.cpp  ffmpeg_kit_flutter_plugin.h  ffmpeg_kit_flutter_plugin_c_api.cpp
flutter/windows/include/ffmpeg_kit_extended_flutter/: ffmpeg_kit_extended_flutter_plugin.h  ffmpeg_kit_extended_flutter_plugin_c_api.h  ffmpeg_kit_flutter_plugin.h
flutter/windows/test/: ffmpeg_kit_extended_flutter_plugin_test.cpp  ffmpeg_kit_flutter_plugin_test.cpp
flutter_platform_interface/: LICENSE  pubspec.yaml
flutter_platform_interface/lib/: ffmpeg_kit_flutter_platform_interface.dart  method_channel_ffmpeg_kit_flutter.dart
macos/Runner.xcodeproj/: project.pbxproj
react-native/: .eslintrc.js  .gitignore  CHANGELOG.md  FFmpegKitExtended.podspec  README.md  TEST.md  TODO.md  build.sh  clean.sh  launch.sh  package-lock.json  package.json  react-native.config.js  tsconfig.build.json  tsconfig.json  tsconfig.test.json
react-native/android/: CMakeLists.txt  build.gradle
react-native/android/src/main/java/com/akashskypatel/ffmpegkit/: FFplayKitAndroid.java
react-native/android/src/main/java/com/akashskypatel/ffmpegkitextended/: FFmpegKitExtendedPackage.java  FFplayTextureView.java  FFplayViewManager.java
react-native/appletvos/: RCTFFplayView.mm
react-native/cpp/: FFmpegKitDynamicApi.cpp  FFmpegKitDynamicApi.h  FFmpegKitExtendedImpl.cpp  FFmpegKitExtendedImpl.h
react-native/example/: .gitignore  App.android.tsx  App.ios.tsx  App.linux.tsx  App.tsx  App.tv.tsx  README.md  app.json  ffmpeg-kit-extended.config.json  metro.config.js  package-lock.json  package.json
react-native/ios/: OnLoad.mm  RCTFFplayView.h  RCTFFplayView.mm
react-native/linux/: FFmpegKitExtendedTurboModule.cpp  FFmpegKitExtendedTurboModule.h  FFplayViewComponent.cpp  FFplayViewComponent.h  FFplayViewComponentDescriptor.h  FFplayViewComponentProvider.cpp  FFplayViewComponentProvider.h  FFplayViewShadowNode.h
react-native/macos/: RCTFFplayView.h  RCTFFplayView.mm
react-native/scripts/: download-ffmpeg-kit-artifact.js  prepare-linux-react-native-skia.py  prepare-linux-runtime.sh  prepare-windows-runtime.ps1  resolve-ffmpeg-kit-config.js  sync-appletvos-codegen.js
react-native/src/: FFplayViewNativeComponent.ts  NativeFFmpegKitExtended.ts  arguments.ts  ffmpeg-kit-config.ts  ffmpeg-kit-extended.ts  ffmpeg-kit.ts  ffplay-kit.ts  ffplay-view.tsx  ffprobe-kit.ts  index.ts  media-information.ts  session-queue-manager.ts  session.ts  types.ts
react-native/tests/: arguments.test.js  codegen-lifecycle.test.js  media-information.test.js  resolve-ffmpeg-kit-config.test.js  session-queue-manager.test.js  types.test.js
react-native/windows/: ExperimentalFeatures.props  FFmpegKitExtended.sln
test/: widget_test.dart
(+187 files in other folders)
